tests/alb_ingress_ext.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: missconfigured-ext-alb
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: domain.test
      http:
        paths:
          - backend:
              serviceName: service-cluster-ip
              servicePort: 24322
            path: /*
    - host: anotherdomain.test
      http:
        paths:
          - backend:
              serviceName: service-node-port
              servicePort: 24322
            path: /*
---
apiVersion: v1
kind: Service
metadata:
  name: service-node-port
spec:
  ports:
    - name: http
      port: 24322
      protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip
spec:
  ports:
    - name: http
      port: 24322
      protocol: TCP
  type: ClusterIP
