tests/alb_named_sg.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/security-groups: "sg-1234567,sg-999"
    kubernetes.io/ingress.class: alb
  name: alb-named-incorrect
spec:
  rules:
    - host: "host"
      http:
        paths:
          - backend:
              serviceName: svc_name
              servicePort: 1234
            path: /*
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/security-groups: "named-security-group"
    kubernetes.io/ingress.class: alb
  name: alb-named-incorrect
spec:
  rules:
    - host: "host"
      http:
        paths:
          - backend:
              serviceName: svc_name
              servicePort: 1234
            path: /*
