tests/never_restart.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: hello-node-never-restart
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources: {}
      livenessProbe:
        exec:
          command:
            - echo
            - "aaa"
        initialDelaySeconds: 2
        periodSeconds: 5
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
