tests/overlapping_probes.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: hello-node
  namespace: default
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources: {}
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        successThreshold: 2
        failureThreshold: 4
        periodSeconds: 4
      livenessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
        initialDelaySeconds: 10
        periodSeconds: 5
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
