tests/pdb_hpa_missconfigured.yaml
apiVersion: policy/v1beta1
kind: PodDisruptionBudget
metadata:
  name: pdb-hpa-missconfigured
spec:
  maxUnavailable: 1
  selector:
    matchLabels:
      app: pdb-hpa-missconfigured
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdb-hpa-missconfigured
  labels:
    app: pdb-hpa-missconfigured
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pdb-hpa-missconfigured
  template:
    metadata:
      labels:
        app: pdb-hpa-missconfigured
    spec:
      containers:
        - name: pdb
          image: busybox
          command:
            - "sleep"
            - "10000"
---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: pdb-hpa-missconfigured
spec:
  minReplicas: 1
  maxReplicas: 5
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: pdb-hpa-missconfigured
