tests/pod_requirements.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: hello-node-hardcoded-env-var
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources:
        limits:
          cpu: "100m"
          memory: "1G"
        requests:
          cpu: "50m"
          memory: "500M"
