tests/pod_requirements_ko.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: missing-limit-cpu
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources:
        limits:
          memory: "1G"
        requests:
          cpu: "50m"
          memory: "500M"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: missing-limit-memory
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources:
        limits:
          cpu: "50m"
        requests:
          cpu: "50m"
          memory: "500M"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: missing-requests-cpu
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources:
        limits:
          cpu: "50m"
          memory: "1G"
        requests:
          memory: "500M"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: missing-requests-mem
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources:
        limits:
          cpu: "50m"
          memory: "1G"
        requests:
          cpu: "50m"
