tests/secret_on_env_var.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-node
  name: hello-node-hardcoded-env-var
  namespace: test
spec:
  containers:
    - image: gcr.io/hello-minikube-zero-install/hello-node
      imagePullPolicy: Always
      name: hello-node
      resources: {}
      env:
        - name: ADMIN_PASSWORD
          value: "change_me"
        - name: ADMIN_TOKEN
          value: "token"
        - name: KEY_SERVICE
          value: "key"
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: PASSWORD_FROM_SECRET
          valueFrom:
            secretKeyRef:
              name: secrets
              key: password
        - name: ADMIN_PAssWORD
          value: "change_me"
        - name: SUSPICIOUS_ENV
          value: "change_me"
        - name: ENV_ANOTHER
          value: "randomvalue"
      livenessProbe:
        exec:
          command:
            - echo
            - "aaa"
        initialDelaySeconds: 2
        periodSeconds: 5
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
